# cdesktopenv

./: AGENTS.md  session-ses_12bb.md
cde/: .gitignore  Makefile.am  configure.ac
cde/.sisyphus/evidence/: cjk-docker-test-matrix.sh  disable-xft-identity-check.sh  enable-xft-smoke-test.sh  valgrind-leak-test.sh  visual-regression-test.sh
cde/contrib/: Makefile.am
cde/contrib/desktop2dt/: Makefile.am
cde/contrib/desktopentry/: Makefile.am
cde/contrib/rc/: Makefile.am
cde/contrib/rc/freebsd/: Makefile.am
cde/contrib/rc/linux/: Makefile.am
cde/contrib/rc/netbsd/: Makefile.am
cde/contrib/rc/openbsd/: Makefile.am
cde/contrib/rc/systemd/: Makefile.am
cde/contrib/vcal2xapia/: Makefile.am
cde/contrib/xinetd/: Makefile.am
cde/doc/common/guides/: builderGuide.am  docbookGuide.am  dtkshGuide.am  glossary.am  guides_env.am  helpGuide.am  i18nGuide.am  infoAPGuide.am  infoUGuide.am  man.am  progGuide.am  progOview.am  sysAdminGuide.am  ttGuide.am  usersGuide.am
cde/doc/common/help/: sdl-docs.am
cde/doc/de_DE.UTF-8/cde.dti/: bookcase.map
cde/doc/de_DE.UTF-8/guides/: Makefile.am
cde/doc/de_DE.UTF-8/help/: Makefile.am
cde/doc/en_US.UTF-8/cde.dti/: bookcase.map
cde/doc/en_US.UTF-8/guides/: Makefile.am
cde/doc/en_US.UTF-8/help/: Makefile.am
cde/doc/en_US.UTF-8/m-guides/: Makefile.am
cde/doc/en_US.UTF-8/man/: Makefile.am
cde/doc/es_ES.UTF-8/cde.dti/: bookcase.map
cde/doc/es_ES.UTF-8/guides/: Makefile.am
cde/doc/es_ES.UTF-8/help/: Makefile.am
cde/doc/fr_FR.UTF-8/cde.dti/: bookcase.map
cde/doc/fr_FR.UTF-8/guides/: Makefile.am
cde/doc/fr_FR.UTF-8/help/: Makefile.am
cde/doc/it_IT.UTF-8/cde.dti/: bookcase.map
cde/doc/it_IT.UTF-8/guides/: Makefile.am
cde/doc/it_IT.UTF-8/help/: Makefile.am
cde/doc/ja_JP.UTF-8/cde.dti/: bookcase.map
cde/imports/: Makefile.am
cde/imports/motif/: Makefile.am
cde/include/: Makefile.am
cde/include/Dt/: DtFont.h  DtHash.h  FontEnum.h  TermPrimP.h
cde/include/DtI/: DisplayAreaP.h  DtFontI.h  FontI.h  XUICreateI.h
cde/lib/: Makefile.am
cde/lib/DtFont/: DtFont.c  FontEnum.c  Makefile.am  XftWrapper.c
cde/lib/DtHelp/: Access.c  AccessSDLP.h  CleanUp.c  CleanUpI.h  Font.c  Format.c  FormatSDL.c  FormatUtilI.h  GlobSearch.c  HelpDialog.c  HelpQuickD.c  HelpUtil.c  Makefile.am  XInterface.c  XUICreate.c
cde/lib/DtPrint/: Makefile.am  PrintSetupB.c
cde/lib/DtSearch/: Makefile.am  isduprec.c
cde/lib/DtSvc/: Makefile.am
cde/lib/DtWidget/: ComboBox.c  Control.c  Editor.c  Icon.c  Makefile.am  SearchCalls.c  SpinBox.c  TitleBox.c  View.c
cde/lib/csa/: Makefile.am
cde/lib/tt/: Makefile.am
cde/programs/: Makefile.am
cde/programs/dsdm/: dsdm.c
cde/programs/dtaction/: Main.c  Makefile.am
cde/programs/dtappintegrate/: Makefile.am
cde/programs/dtcalc/: Makefile.am  motif.c
cde/programs/dtconfig/: Makefile.am
cde/programs/dtcreate/: FileCharacteristics.c  Makefile.am  af_aux.h  cmncbs.c  cmnutils.c  icon_selection_dialog.c  icon_selection_dialog.h  main.c
cde/programs/dtdspmsg/: Makefile.am
cde/programs/dtexec/: Main.c  Makefile.am
cde/programs/dtfile/: ChangeDir.c  ChangeDirP.c  Desktop.c  Directory.c  Encaps.c  Encaps.h  File.c  FileDialog.c  FileManip.c  FileMgr.c  FileMgr.h  FileOp.c  Filter.c  Find.c  Help.c  IconWindow.c  Main.c  Main.h  Makefile.am  MkDir.c  ModAttr.c  MultiView.c  MultiView.h  OverWrite.c  Prefs.c  SharedProcs.c
cde/programs/dthello/: Makefile.am  dthello.c
cde/programs/dticon/: Makefile.am  fileIO.c  fileIODialog.c  image.c  image.h  main.c  utils.c
cde/programs/dtimsstart/: Makefile.am  action.c  file.c  main.c  remote.c  select.c  start.c  win.c  ximsfunc.h
cde/programs/dtksh/: Makefile.am  dtkcmds.c  dtkcmds.h  dtkcvt.c  widget.c  xmcmds.c  xmwidgets.c
cde/programs/dtlogin/: Makefile.am  Wrap.h  access.c  auth.c  choose.c  chooser.c  daemon.c  dm.h  dpylist.c  dtchooser.c  fontpath.c  genauth.c  policy.c  reset.c  server.c  socket.c  sysauth.c  verify.c  vgcallback.c  vglang.c  vgmain.c  xdmcp.c
cde/programs/dtmail/: Makefile.am
cde/programs/dtopen/: Makefile.am
cde/programs/dtpad/: Makefile.am  dtpad.h  fileCB.c  fileIo.c  main.c  ttMsgSupport.c
cde/programs/dtpdm/: Makefile.am  PdmOid.c  PdmXp.c
cde/programs/dtpdmd/: Makefile.am  dtpdmdP.h  manager.c
cde/programs/dtprintegrate/: Makefile.am
cde/programs/dtprintinfo/: Makefile.am  sym2num
cde/programs/dtscreen/: Makefile.am  dtscreen.c  dtscreen.h  pyro.c  resource.c
cde/programs/dtsearchpath/: Makefile.am
cde/programs/dtsession/: Makefile.am  SmError.c  SmLock.c  SmMain.c  SmRestore.c  SmSave.c  SmWatch.c  SmXSMP.c  SmXSMP.h
cde/programs/dtspcd/: Makefile.am  main.c
cde/programs/dtstyle/: Backdrop.c  ColorEdit.c  Dtstyle.src  Font.c  Font.h  FontPicker.c  FontPicker.h  I18nMain.c  I18nUtil.h  Main.c  Main.h  MainWin.c  MainWin.h  Makefile.am  Mouse.c  Protocol.c  Protocol.h  Resource.c  Resource.h  Screen.c  dtstyle.man  dtstyle.msg  dtstyle_sysapply.sh  nlsREADME.txt  org.cde.dtstyle.font.policy
cde/programs/dtterm/: Makefile.am
cde/programs/dtudcexch/: Makefile.am
cde/programs/dtudcfonted/: Makefile.am
cde/programs/dtwm/: Clock.c  Makefile.am  PanelS.c  WmCDecor.c  WmCPlace.c  WmError.h  WmEvent.c  WmFeedback.c  WmFunction.c  WmGlobal.h  WmGraphics.c  WmGraphics.h  WmImage.c  WmInitWs.c  WmInstantTitle.c  WmMain.c  WmMenu.c  WmPresence.c  WmResCvt.c  WmResParse.c  WmResource.c  WmWinConf.c  WmWinInfo.c  WmXSMP.h
cde/programs/dtxdg2appmgr/: .gitignore  Makefile.am  README.md  cache.c  cache.h  category_mapper.c  category_mapper.h  desktop_parser.c  desktop_parser.h  dt_writer.c  dt_writer.h  dtxdg2appmgr.c  exec_parser.c  exec_parser.h  icon_resolver.c  icon_resolver.h  options.c  options.h  path_scanner.c  path_scanner.h  xpm_converter.c  xpm_converter.h
cde/programs/fontaliases/: Makefile.am
cde/programs/icons/: Fpdeflt.l.bm  Fpdeflt.l.pm  Fpdeflt.m.bm  Fpdeflt.m.pm
cde/programs/localized/: Makefile.am
cde/programs/ttsnoop/: Makefile.am
cde/programs/tttypes/: Makefile.am
cde/programs/types/: Makefile.am  dt.dt.src
cde/util/tradcpp/: Makefile.am
(+411 files in other folders)
