MAINTAINERCLEANFILES = Makefile.in

# Install the header files

nobase_include_HEADERS = Dt/Editor.h \
	Dt/TermPrim.h \
	Dt/Term.h \
	Dt/HelpDialog.h \
	Dt/Help.h \
	Dt/HelpQuickD.h \
	Dt/Print.h \
	Dt/Mrm.h \
	Dt/Dt.h \
	Dt/Action.h \
	Dt/Dnd.h \
	Dt/Dts.h \
	Dt/Session.h \
	Dt/Saver.h \
	Dt/Wsm.h \
	Dt/MsgLog.h \
	Dt/ComboBox.h \
	Dt/SpinBox.h \
	Dt/MenuButton.h \
	Tt/tt_c.h \
	Tt/tttk.h \
	csa/csa.h \
	Dt/Info.h \
	Dt/Search.h \
	Dt/Mmdb.h \
	Dt/DtXinerama.h \
	Dt/SvcPam.h \
	Dt/ActionDb.h \
	Dt/ActionDbP.h \
	Dt/ActionFind.h \
	Dt/ActionP.h \
	Dt/ActionUtilP.h \
	Dt/CanvasP.h \
	Dt/CanvasSegP.h \
	Dt/ChkpntP.h \
	Dt/CmdInv.h \
	Dt/CmdInvP.h \
	Dt/Collate.h \
	Dt/ComboBoxP.h \
	Dt/CommandM.h \
	Dt/Connect.h \
	Dt/Control.h \
	Dt/ControlP.h \
	Dt/DataTypes.h \
	Dt/DbReader.h \
	Dt/DbUtil.h \
	Dt/DialogBox.h \
	Dt/DialogBoxP.h \
	Dt/DndIconI.h \
	Dt/DndP.h \
	Dt/DtFont.h \
	Dt/FontEnum.h \
	Dt/DtGetMessageP.h \
	Dt/DtHash.h \
	Dt/DtMsgsP.h \
	Dt/DtNlUtils.h \
	Dt/DtP.h \
	Dt/DtPStrings.h \
	Dt/DtShmDb.h \
	Dt/DtStrDefs.h \
	Dt/DtosP.h \
	Dt/DtpadM.h \
	Dt/DtsDb.h \
	Dt/DtsMM.h \
	Dt/Editor.h \
	Dt/EditorP.h \
	Dt/EnvControlI.h \
	Dt/EnvControlP.h \
	Dt/FileM.h \
	Dt/FileUtil.h \
	Dt/GetDispRes.h \
	Dt/HashP.h \
	Dt/HelpDialogP.h \
	Dt/HelpP.h \
	Dt/HelpQuickDP.h \
	Dt/HourGlass.h \
	Dt/Icon.h \
	Dt/IconFile.h \
	Dt/IconP.h \
	Dt/Indicator.h \
	Dt/IndicatorM.h \
	Dt/LocaleXlate.h \
	Dt/Lock.h \
	Dt/MacrosP.h \
	Dt/MenuButtonP.h \
	Dt/Message.h \
	Dt/Msg.h \
	Dt/MsgCatP.h \
	Dt/MsgLogI.h \
	Dt/MsgP.h \
	Dt/PrintDlgMgrP.h \
	Dt/PrintI.h \
	Dt/PrintMsgsP.h \
	Dt/PrintOptionsP.h \
	Dt/PrintSetupBP.h \
	Dt/PsubDefProcI.h \
	Dt/PsubUtilI.h \
	Dt/Qualify.h \
	Dt/SaverP.h \
	Dt/SearchE.h \
	Dt/SearchP.h \
	Dt/Service.h \
	Dt/SessionM.h \
	Dt/SessionP.h \
	Dt/Setlocale.h \
	Dt/SharedProcs.h \
	Dt/SmCreateDirs.h \
	Dt/Spc.h \
	Dt/SpinBoxP.h \
	Dt/SvcTT.h \
	Dt/TermP.h \
	Dt/TermPrimP.h \
	Dt/TitleBox.h \
	Dt/TitleBoxP.h \
	Dt/Unistd.h \
	Dt/UserMsg.h \
	Dt/Utility.h \
	Dt/UtilityP.h \
	Dt/View.h \
	Dt/ViewP.h \
	Dt/WsmM.h \
	Dt/WsmP.h \
	Dt/XlationSvc.h \
	Dt/boolpars.h \
	Dt/dberr.h \
	Dt/dblock.h \
	Dt/dbtype.h \
	Dt/dbxtrn.h \
	Dt/dproto.h \
	Dt/dtcover.h \
	Dt/dtpdmd.h \
	Dt/inittab.h \
	Dt/ll.h \
	Dt/ncb.h \
	Dt/proto.h \
	Dt/task.h \
	Dt/trxlog.h \
	Dt/vista.h \
	DtI/Access.h \
	DtI/AccessI.h \
	DtI/AccessP.h \
	DtI/ActionsI.h \
	DtI/CallbacksI.h \
	DtI/CanvasI.h \
	DtI/DisplayAreaI.h \
	DtI/DisplayAreaP.h \
	DtI/DtFontI.h \
	DtI/FileUtilsI.h \
	DtI/FontAttrI.h \
	DtI/FontI.h \
	DtI/GifUtilsI.h \
	DtI/GraphicsP.h \
	DtI/HelpTermP.h \
	DtI/HelposI.h \
	DtI/HourGlassI.h \
	DtI/JpegUtilsI.h \
	DtI/LinkMgrP.h \
	DtI/RegionI.h \
	DtI/SetListI.h \
	DtI/XUICreateI.h \
	DtI/XbmUtilsI.h \
	DtI/bufioI.h \
	EUSCompat.h \
	SPC/chars.h \
	SPC/spc-obj.h \
	SPC/spc-proto.h \
	SPC/spcE.h \
	SPC/spcP.h \
	Xm/XmPrivate.h \
	bms/MemoryMgr.h \
	bms/SbEvent.h \
	bms/Symbolic.h \
	bms/XeUserMsg.h \
	bms/bms.h \
	bms/connect.h \
	bms/pathwexp.h \
	bms/sbport.h \
	bms/sbstdinc.h \
	bms/scoop.h \
	bms/spc.h \
	bms/stringbuf.h \
	bms/usersig.h \
	cde_config.h \
	codelibs/boolean.h \
	codelibs/pathutils.h \
	codelibs/shellutils.h
