MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = libDtMail MotifApp dtmail dtmailpr

EXTRA_DIST = include/DtMail/AliasListUiItem.hh \
	include/DtMail/AlternatesListUiItem.hh \
	include/DtMail/AntiCheckBoxUiItem.hh \
	include/DtMail/Buffer.hh \
	include/DtMail/CheckBoxUiItem.hh \
	include/DtMail/CheckForMailUiItem.hh \
	include/DtMail/CustomListUiItem.hh \
	include/DtMail/Dictionary.hh \
	include/DtMail/DtLanguages.hh \
	include/DtMail/DtMail.hh \
	include/DtMail/DtMailError.hh \
	include/DtMail/DtMailP.hh \
	include/DtMail/DtMailServer.hh \
	include/DtMail/DtMailValues.hh \
	include/DtMail/DtVirtArray.hh \
	include/DtMail/EncryptedTextFieldUiItem.hh \
	include/DtMail/FileShare.hh \
	include/DtMail/HashTable.hh \
	include/DtMail/IO.hh \
	include/DtMail/IgnoreListUiItem.hh \
	include/DtMail/ImplDriver.hh \
	include/DtMail/InboxTextFieldUiItem.hh \
	include/DtMail/IndexedOptionMenuUiItem.hh \
	include/DtMail/ListUiItem.hh \
	include/DtMail/MoveMenuListUiItem.hh \
	include/DtMail/ObjectKey.hh \
	include/DtMail/PropSource.hh \
	include/DtMail/PropUi.hh \
	include/DtMail/ScaleUiItem.hh \
	include/DtMail/SpinBoxUiItem.hh \
	include/DtMail/TemplateListUiItem.hh \
	include/DtMail/TextFieldUiItem.hh \
	include/DtMail/Threads.hh \
	include/MotifApp/Help.hh \
	include/MotifApp/ShutdownActions.hh \
	include/utils/EUSDebug.hh \
	include/utils/MemUtils.hh \
	include/DtMail/Common.h \
	include/DtMail/DtMail.h \
	include/DtMail/DtMailProps.h \
	include/DtMail/DtMailSigChld.h \
	include/DtMail/DtMailTypes.h \
	include/DtMail/DtMailXtProc.h \
	include/DtMail/OptCmd.h \
	include/DtMail/options_util.h \
	include/MotifApp/Application.h \
	include/MotifApp/AskFirstCmd.h \
	include/MotifApp/BasicComponent.h \
	include/MotifApp/BusyPixmap.h \
	include/MotifApp/ButtonInterface.h \
	include/MotifApp/Cmd.h \
	include/MotifApp/CmdInterface.h \
	include/MotifApp/CmdList.h \
	include/MotifApp/ColorView.h \
	include/MotifApp/DialogCallbackData.h \
	include/MotifApp/DialogManager.h \
	include/MotifApp/IconifyCmd.h \
	include/MotifApp/InfoDialogManager.h \
	include/MotifApp/InterruptibleCmd.h \
	include/MotifApp/MainWindow.h \
	include/MotifApp/ManageCmd.h \
	include/MotifApp/MenuBar.h \
	include/MotifApp/MenuWindow.h \
	include/MotifApp/MotifCmds.h \
	include/MotifApp/NoUndoCmd.h \
	include/MotifApp/PixmapCycler.h \
	include/MotifApp/PromptDialogManager.h \
	include/MotifApp/QuestionDialogManager.h \
	include/MotifApp/QuitCmd.h \
	include/MotifApp/ScrollingList.h \
	include/MotifApp/SelectFileCmd.h \
	include/MotifApp/ToggleButtonInterface.h \
	include/MotifApp/UIComponent.h \
	include/MotifApp/UndoCmd.h \
	include/MotifApp/WarnNoUndoCmd.h \
	include/MotifApp/WorkingDialogManager.h \
	include/MotifApp/dtmailopts.h \
	include/MotifApp/mailtest.h \
	include/utils/str_utils.h
