SUBDIRS = util C

if GERMAN
SUBDIRS += de_DE.UTF-8
endif

if ITALIAN
SUBDIRS += it_IT.UTF-8
endif

if SPANISH
SUBDIRS += es_ES.UTF-8
endif

if FRENCH
SUBDIRS += fr_FR.UTF-8
endif

if JAPANESE
SUBDIRS += ja_JP.UTF-8
endif

if CHINESE
SUBDIRS += zh_CN.UTF-8
endif

if CHINESE_TW
SUBDIRS += zh_TW.UTF-8
endif
