MAINTAINERCLEANFILES = Makefile.in

noinst_PROGRAMS = tradcpp

tradcpp_SOURCES = array.c directive.c files.c macro.h output.h		\
	utils.c array.h directive.h files.h main.c place.c utils.h	\
	bool.h eval.c inlinedefs.h mode.h place.h version.h config.h	\
	eval.h macro.c output.c union.h

noinst_HEADERS = array.h \
	bool.h \
	config.h \
	directive.h \
	eval.h \
	files.h \
	inlinedefs.h \
	macro.h \
	mode.h \
	output.h \
	place.h \
	union.h \
	utils.h \
	version.h
