MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libHardCopy.la

libHardCopy_la_CXXFLAGS = -DEXPAND_TEMPLATES -DCDE_NEXT -I..

libHardCopy_la_SOURCES = FPset.C \
			 HardCopyFP.C \
			 TemplatesAutoNumber.C \
			 autoNumber.C \
			 autoNumberFP.C

noinst_HEADERS = FPExceptions.h \
	FPset.h \
	HardCopyFP.h \
	autoNumber.h \
	autoNumberFP.h \
	lout_limits.h
