MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libdti_cc.la

libdti_cc_la_CXXFLAGS = -I..

libdti_cc_la_SOURCES = CC_Dlist.C \
		       CC_Listbase.C \
		       CC_Slist.C \
		       CC_Stack.C \
		       CC_String.C \
		       CC_Tokenizer.C \
		       cc_exceptions.C \
		       cc_hdict.C \
		       cc_povec.C \
		       cc_pvect.C \
		       cc_vvect.C \
		       hdictinit.C \
		       vectinit.C

noinst_HEADERS = CC_Dlist.h \
	CC_Listbase.h \
	CC_Slist.h \
	CC_Stack.h \
	CC_String.h \
	CC_Tokenizer.h \
	cc_exceptions.h \
	cc_hdict.h \
	cc_povec.h \
	cc_pvect.h \
	cc_vvect.h \
	types.h
