MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = liboliasdb.la

liboliasdb_la_CXXFLAGS = -DNO_DB_LOCK -I..

liboliasdb_la_SOURCES = asciiIn_filters.C \
			collectionIterator.C \
			dlp_hd.C \
			doc_hd.C \
			graphic_hd.C \
			locator_hd.C \
			mark.C \
			mark_base.C \
			mmdb.C \
			node_hd.C \
			olias_funcs.C \
			stylesheet_hd.C \
			toc_hd.C \
			user_base.C

noinst_HEADERS = DtMmdb.h \
	asciiIn_filters.h \
	c_api_common.h \
	collectionIterator.h \
	dlp_hd.h \
	dlp_test.h \
	doc_hd.h \
	doc_test.h \
	graphic_hd.h \
	graphic_test.h \
	loc_test.h \
	locator_hd.h \
	mark.h \
	mark_base.h \
	mark_test.h \
	mmdb.h \
	node_hd.h \
	node_test.h \
	olias_consts.h \
	olias_funcs.h \
	olias_server.h \
	olias_test.h \
	pref.h \
	pref_base.h \
	stylesheet_hd.h \
	stylesheet_test.h \
	toc_hd.h \
	toc_test.h \
	user_base.h \
	user_config.h \
	user_mark.h
